--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="fixed-top navbar navbar-expand-sm navbar-dark bg-light" [class.blur]="isScrolled">
+<nav class="fixed-top navbar navbar-expand-md navbar-dark bg-light" [class.blur]="isScrolled">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/home">FarMarket</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
@@ -18,9 +18,11 @@
         </li>
         <li class="nav-item">
           <a routerLink="/checkout" class="nav-link">
-            Cart
+            Cart 
+            <i *ngIf="cartItemCount > 0" class="fas fa-shopping-cart"></i> 
+            <span class="fas fa-cart-plus" *ngIf="cartItemCount > 0">{{ cartItemCount }}</span>
           </a>
-        </li>
+        </li>        
       </ul>    
     </div>
   </div>
