--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,28 +1,55 @@
-<article class="cart-container" style="margin-top: 7rem; height: 100%;">
-    <div *ngFor="let item of _cart; trackBy: trackByFn" class="cart-item">
-      <div class="cart-image">
-        <img [src]="item.productImageUrl" alt="{{ item.productName }} Image" />
-        <p class="product-name">{{ item.productName }}</p>
+<div class="card">
+  <div class="row">
+    <div class="col-md-8 cart">
+      <div class="title">
+        <div class="row">
+          <div class="col"><h4><b>Shopping Cart</b></h4></div>
+          <div class="col align-self-center text-right text-muted">{{ _cart.length }} items</div>
+        </div>
       </div>
-      <div class="quantity-controls">
-        <button
-          (click)="handleChange(item, -1)"
-          class="quantity-button"
-          [disabled]="item.quantity <= 1"
-        >-</button>
-        <button class="quantity-display">{{ item.quantity }}</button>
-        <button (click)="handleChange(item, 1)" class="quantity-button">+</button>
-      </div>
-      <div class="item-details">
-        <span class="unit-price"> {{ roundPrice(item.productPrice) }} </span>
-        <span class="item-total">Kshs {{ item.productPrice * item.quantity }}</span>
-        <button (click)="handleRemove(item.productId)" class="remove-button">Remove</button>
+      <div class="row border-top border-bottom" *ngFor="let item of _cart; trackBy: trackByFn">
+        <div class="row main align-items-center">
+          <div class="col-2"><img [src]="item.productImageUrl" alt="{{ item.productName }} Image" /></div>
+          <div class="col">
+            <div class="row">{{ item.productName }}</div>
+          </div>
+          <div class="quantity-controls">
+            <button
+              (click)="handleChange(item, -1)"
+              class="quantity-button"
+              [disabled]="item.quantity <= 1"
+            >-</button>
+            <button class="quantity-display">{{ item.quantity }}</button>
+            <button (click)="handleChange(item, 1)" class="quantity-button">+</button>
+          </div>
+          <div class="col">{{ roundPrice(item.productPrice) }}</div>
+          <button (click)="handleRemove(item.productId)" class="remove-button">Remove</button>
+        </div>
       </div>
     </div>
-    <div class="total">
-        <span class="total-label">Your Total is: </span>
-        <span class="total-price"> {{ roundPrice(productPrice) }} </span>
-        <button class="place-order-button" *ngIf="_cart.length > 0" (click)="placeOrder()">Place Order</button>
+    <div class="col-md-4 summary">
+      <div><h5><b>Summary</b></h5></div>
+      <hr>
+      <div class="row">
+        <div class="col" style="padding-left: 0;"> {{ _cart.length }}  ITEMS</div>
+        <div class="col text-right">{{ roundPrice(productPrice) }}</div>
       </div>
-  </article>
-  
+      <form>
+        <p>SHIPPING</p>
+        <select>
+          <option>Select Shipping Options</option>
+          <option class="text-muted">Standard-Delivery- Ksh 500.00</option>
+          <option class="text-muted">Fast Shipping- Ksh 5000.00</option>
+        </select>
+        
+        <p>GIVE CODE</p>
+        <input id="code" placeholder="Enter your code">
+      </form>
+      <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
+        <div class="col">TOTAL PRICE</div>
+        <div class="col text-right">{{ roundPrice(productPrice) }}</div>
+      </div>
+      <button class="btn" (click)="placeOrder()">CHECKOUT</button>
+    </div>
+  </div>
+</div>
