--- a/src/app/components/landingpage/landingpage.component.html
+++ b/src/app/components/landingpage/landingpage.component.html
@@ -1,7 +1,7 @@
 <div class="landingpage">
     <div class="home-content">
         <div class="row">
-        <div class="col-md-8 home-header banner" style="padding-left: 4rem; font-size: 2rem; font-weight: 600;">
+        <div class="col-md-8 home-header banner" style="">
             <p>FRESH . ORGANIC . NUTRITIOUS</p>
         </div>
         <div class="col-md-4 myAvtar">
