--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -1,16 +1,27 @@
 <div class="container" style="margin-top: 7rem; padding: 5rem; align-items: center; justify-content: center;">
   <div [ngClass]="isSidePanelVisible ? 'row' : ''">
     <div [ngClass]="isSidePanelVisible ? 'col-8' : 'col-12'">
-      <div class="card" style="">       
-        <div class="card-body">
+      <div class="card">       
+        <div class="card-body" >
+          <form class="d-flex">
+            <input class="form-control me-1" type="text" [(ngModel)]="searchTerm" name="searchTerm" placeholder="   Search..." style="width: 10rem">
+            <button class="btn btn-primary" type="button" (click)="searchProducts()" style="width: 4rem">Search</button>
+          </form>
+             
           <div class="row">
             <div class="col-md-3 col-sm-6 mb-3" *ngFor="let product of productsList" style="padding: 1.5rem;">
               <div class="card" style="width: 100%;">
                 <img class="card-img-top" [src]="product.productImageUrl" alt="Card image">
-                <div class="card-body">
-                  <h5 class="card-title">{{ product.productName }}</h5>
-                  <p class="card-text">Price: {{ product.productPrice }}</p>
-                  <a class="btn btn-primary" (click)="addToCart(product)">Add to Cart</a>
+                <div class="card-body" (mouseleave)="resetDescription(product)">
+                  <ng-container *ngIf="!product.showDescription; else descriptionBlock">
+                    <h5 class="card-title" (mouseenter)="toggleDescription(product)"> {{ product.productName }}</h5>
+                  </ng-container>
+                  <ng-template #descriptionBlock>
+
+                    <p class="card-text" style="margin-top: 0.5rem;">{{ product.productDescription }}</p>
+                    <p class="card-text" style="margin-top: 0.5rem;">Price: Ksh {{ product.productPrice }}</p>
+                    <a class="btn btn-primary" (click)="addToCart(product)">Add to Cart</a>
+                  </ng-template>
                 </div>
               </div>
             </div>
