added api functionality

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -22,7 +22,25 @@
             <i *ngIf="cartItemCount > 0" class="fas fa-shopping-cart"></i> 
             <span class="fas fa-cart-plus" *ngIf="cartItemCount > 0">{{ cartItemCount }}</span>
           </a>
-        </li>        
+        </li>  
+        <li class="nav-item" *ngIf="!user && !isUserLoggedIn()">
+          <a routerLink="/login" class="nav-link">
+            Login
+          </a>
+        </li>
+        <li class="nav-item" *ngIf="!user && !isUserLoggedIn()">
+          <a routerLink="/signup" class="nav-link">
+            Signup
+          </a>
+        </li>
+        <li class="nav-item" *ngIf="user || isUserLoggedIn()">
+          <a routerLink="/profile" class="nav-link">
+            Profile
+          </a>
+        </li>
+        <li class="nav-item" *ngIf="user || isUserLoggedIn()" (click)="logout()">
+          LOGOUT
+        </li>
       </ul>    
     </div>
   </div>
