--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,4 +1,4 @@
-<div class="settings">
+<!-- <div class="settings">
     <div class="settingsWrapper">
       <div class="settingsTitle">
         <span class="settingsTitleUpdate">Update Your Account</span>
@@ -14,4 +14,4 @@
       </form>
     </div>
 </div>
-  
+   -->
