--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,14 +7,10 @@
     <div class="collapse navbar-collapse" id="mynavbar">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a routerLink="/about" class="nav-link">
-            About
-          </a>
+          <a routerLink="/about" class="nav-link">About</a>
         </li>
         <li class="nav-item">
-          <a routerLink="/shop" class="nav-link">
-            Shop
-          </a>
+          <a routerLink="/shop" class="nav-link">Shop</a>
         </li>
         <li class="nav-item">
           <a routerLink="/checkout" class="nav-link">
@@ -23,20 +19,19 @@
             <span class="fas fa-cart-plus" *ngIf="cartItemCount > 0">{{ cartItemCount }}</span>
           </a>
         </li>  
-        <li class="nav-item" *ngIf="isUserLoggedIn()">
-          <a routerLink="/profile" class="nav-link">
-            Profile
-          </a>
-        </li>
-        <li class="nav-item" *ngIf="isUserLoggedIn()" (click)="logout()">
-          LOGOUT
-        </li>
-        <li class="nav-item" *ngIf="!isUserLoggedIn()">
-          <a routerLink="/login" class="nav-link">
-            Login
-          </a>
-        </li>      
-        
+        <ng-container *ngIf="isUserLoggedIn(); ">
+          <li class="nav-item">
+            <a routerLink="/profile" class="nav-link">Profile</a>
+          </li>
+          <li class="nav-item" (click)="logout()">
+            Logout
+          </li>
+        </ng-container>
+        <ng-template #loggedOutTemplate>
+          <li class="nav-item">
+            <a routerLink="/login" class="nav-link">Login</a>
+          </li> 
+        </ng-template> 
       </ul>    
     </div>
   </div>
